# heist

./: .gitignore  LICENSE  README.md  heist.code-workspace  pyproject.toml  requirements.txt
config/: settings.yaml
scripts/heist/: __init__.py  expense.py  finance.py  itemize.py  sheet.py  utils.py
scripts/pdfripper/: __init__.py  finance.py  itemize.py  sheet.py  utils.py
scripts/pdfripper/examples/: __init__.py
src/: main.py
src/heist/: __init__.py  config.py  expense.py  finance.py  logger.py  pdf.py  sheet.py  utils.py
